[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/player.png" type="Texture" id=1]
[ext_resource path="res://Entity/Player.gd" type="Script" id=2]
[ext_resource path="res://Entity/Stats.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Player" type="Area2D"]
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
collide_with_areas = true

[node name="Tween" type="Tween" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="StatPanel2" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.6 )
margin_left = -160.0
margin_top = 48.0
margin_right = -96.0
margin_bottom = 76.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="."]
margin_left = -157.155
margin_top = 48.1376
margin_right = -117.155
margin_bottom = 62.1376
text = "Health"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaLabel" type="Label" parent="."]
margin_left = -158.099
margin_top = 61.3518
margin_right = -118.099
margin_bottom = 75.3518
text = "Mana"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="Button" parent="."]
margin_left = -64.0
margin_top = 48.0
margin_right = -21.0
margin_bottom = 68.0
text = "Stats"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatPanel" type="Panel" parent="Stats"]
modulate = Color( 1, 1, 1, 0.6 )
margin_left = -72.0
margin_top = -121.0
margin_right = 32.0
margin_bottom = -35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Stats"]
margin_left = -64.0
margin_top = -112.138
margin_right = 64.0
margin_bottom = 44.8624
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StrenghtLabel" type="Label" parent="Stats/GridContainer"]
margin_right = 63.0
margin_bottom = 14.0
text = "Strenght: "

[node name="DexterityLabel" type="Label" parent="Stats/GridContainer"]
margin_top = 18.0
margin_right = 63.0
margin_bottom = 32.0
text = "Dexterity:"

[node name="VitalityLabel" type="Label" parent="Stats/GridContainer"]
margin_top = 36.0
margin_right = 63.0
margin_bottom = 50.0
text = "Vitality:"

[node name="MagicLabel" type="Label" parent="Stats/GridContainer"]
margin_top = 54.0
margin_right = 63.0
margin_bottom = 68.0
text = "Mana:"
[connection signal="pressed" from="Stats" to="Stats" method="_on_Stats_pressed"]
